#update export phiếu tổng hợp

--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -63,7 +63,7 @@
                 <div class="row">
                     <div class="col-xxl-12">
                         <center>
-                            <button id="downButton" class="btn btn-outline-success"> In phiếu tổng hợp</button>
+                            <button id="downButton" class="btn btn-outline-success"> Tải phiếu tổng hợp</button>
                             <a class="btn btn-outline-primary" onclick="bt_Insert_Dknv_on_divView_Click(0,0,0)">Thêm nguyện vọng</a>
                         </center>
                     </div>
@@ -736,7 +736,7 @@
 
     $(document).ready(function () {
         $('#downButton').click(function () {
-            window.location.href = '/ExportFile/DownloadFile_XetTuyenHB';
+            window.location.href = '/ExportFile/DownloadFile_XetTuyenDGNL_DGTD';
         });
     });
 
