--- a/Views/DangKyXetTuyenThang/Index.cshtml
+++ b/Views/DangKyXetTuyenThang/Index.cshtml
@@ -7,9 +7,11 @@
     label {
         white-space: nowrap !important;
     }
+
     .span_with_for {
         width: 65px !important
     }
+
     .table-container {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
@@ -287,7 +289,23 @@
         </div>
     </div>
 </div>
-
+<style>
+    #loadingModal {
+        background-color: rgba(0, 0, 0, 0.5);
+        background-color: transparent;
+    }
+</style>
+<div class="modal" id="loadingModal" tabindex="-1" role="dialog" aria-labelledby="loadingModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered modal-sm">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
     var HocBaFormData = new FormData();
     var CCCDFormData = new FormData();
@@ -635,6 +653,7 @@
             flag = false;
         }
         if (!flag) return;
+        $("#loadingModal").modal("show");
         uploadFiles();
         let formData = {
             Nganh_ID: Nganh_ID,
@@ -665,13 +684,16 @@
                     ListAllNguyenVong();
                     document.getElementById('div_list_nguyenvong').style.display = "inline";
                     document.getElementById('div_update_dk_nguyenvong').style.display = "none";
+                    $("#loadingModal").modal("hide");
                     onResetFields();
                 } else {
                     showToast("Thông báo", "Có lỗi xảy ra khi thêm mới nguyện vọng!", "bg-error");
+                    $("#loadingModal").modal("hide");
                 }
             },
             error: function (errormessage) {
                 showToast("Thông báo", "Có lỗi xảy ra khi thêm mới nguyện vọng!", "bg-error");
+                $("#loadingModal").modal("hide");
             }
         });
     }
