add validation fields

--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -624,7 +624,11 @@
             flag = false;
         }
         if (!Dkxt_DonViToChuc) {
-            var errorMessage = "Vui lòng nhập tên chứng chỉ";
+            var errorMessage = "Vui lòng nhập tên trường";
+            $('#Dkxt_DonViToChuc_Error').text(errorMessage);
+            flag = false;
+        } else if (!Dkxt_DonViToChuc.trim()) {
+            var errorMessage = "Vui lòng nhập tên trường";
             $('#Dkxt_DonViToChuc_Error').text(errorMessage);
             flag = false;
         }
@@ -646,6 +650,10 @@
         if (!Dkxt_NgayDuThi) {
             var errorMessage = "Vui lòng nhập ngày dự thi";
             $('#Dkxt_NgayDuThi_Error').text(errorMessage);
+            flag = false;
+        } else if (!Dkxt_NgayDuThi.trim()) {
+            var errorMessage = "Vui lòng nhập ngày dự thi";
+            $('#Dkxt_KetQuaDatDuoc_Error').text(errorMessage);
             flag = false;
         }
         if (!flag) return;
