--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -84,12 +84,9 @@
                         </a>
                         <div class="collapse" id="menuPhuongThuc" data-bs-parent="#accordionSidenav">
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
-                                <a class="nav-link" href="@Url.Action("Index", "Khoas")">
-                                    Phương thức 1
-                                </a>
-                                <a class="nav-link" href="@Url.Action("Index", "Khoas")">
-                                    Phương thức 2
-                                </a>
+                                <a class="nav-link" href="@Url.Action("dkxtthptqg", "DangKyXetTuyens")">
+                                    Phương thức 1, 2
+                                </a>                            
                                 <a class="nav-link" href="@Url.Action("dkxthocba", "DangKyXetTuyens")">
                                     Phương thức 3
                                 </a>
