--- a/Views/Shared/_Layout_auth.cshtml
+++ b/Views/Shared/_Layout_auth.cshtml
@@ -21,8 +21,9 @@
 
 </head>
 <body>
-    @RenderBody()
-
+    <div class="container-fluid body-content">
+        @RenderBody()       
+    </div>
     <script src="~/Scripts/bundle.min.js"></script>
     <!-- bootstrap@5.1.3 -->
     <script src="~/Scripts/scripts.js"></script>
