--- a/Views/LienCapTHCS/Index.cshtml
+++ b/Views/LienCapTHCS/Index.cshtml
@@ -3,44 +3,46 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutLienCap.cshtml";
 }
-
+<style>
+    p {
+        margin-bottom: 5px;
+    }
+</style>
 <div class="container-fluid px-12">
     <div id="fadeInUp">
         <div class="row">
             <div class="col-sm-12 col-md-6">
                 <div class="card card-header-actions mt-3 mb-1">
 
-                    <div class="card-header"> <h5>Đăng ký dự tuyển</h5></div>
+                    <div class="card-header">Thông tin tuyển sinh lớp 1</div>
                     <div class="card-body">
-
-                        <div> <a href="@Url.Action("Create", "LienCapTieuHocs")" class="btn btn-light" style="color:blue!important"> <h6> >>  Đăng ký dự tuyển lớp 1</h6></a></div>
-                        <br />
-                        <div> <a href="@Url.Action("Create", "LienCapTHCS")" class="btn btn-light" style="color:blue!important"><h6> >>   Đăng ký dự tuyển lớp 6</h6></a></div>
-
-                        <br />
+                        <div class="row"><div class="col-5"><a href="@Url.Action("Create", "LienCapTieuHocs")" class="btn btn-outline-success">Đăng ký dự tuyển lớp 1</a></div></div>
+                        <div class="row">
+                            <p><b>- Chỉ tiêu: </b>96 học sinh (3 lớp)</p>
+                            <p><b>- Đối tượng: </b>Trẻ em 6 tuổi, đã hoàn thành chương trình giáo dục mầm non</p>
+                            <p><b>- Phương thức tuyển sinh: </b>Xét tuyển</p>
+                            <p><b>- Thời gian đăng ký dự tuyển: </b>Từ 11/7/2023 đến 14/7/2023</p>
+                            <p><b>- Địa điểm: </b>Trường TH, THCS&THPT Hồng Đức</p>
+                        </div>
                     </div>
-
                 </div>
-
             </div>
             <div class="col-sm-12 col-md-6">
                 <div class="card card-header-actions mt-3 mb-1">
-
-                    <div class="card-header"> <h5> Tin tức </h5></div>
+                    <div class="card-header">Thông tin tuyển sinh lớp 6</div>
                     <div class="card-body">
-                        <ul>
-                            <li>
-                                <div><a href="http://www.hdu.edu.vn/thanh-lap-truong-tieu-hoc-trung-hoc-co-so-va-trung-hoc-pho-thong-hong-duc-truc-thuoc-truong-dai-hoc-hong-duc-075351.html" style="color: blue !important; text-decoration: none !important; "> Thành lập Trường tiểu học, trung học cơ sở và trung học phổ thông Hồng Đức, trực thuộc Trường Đại học Hồng Đức</a></div>
-
-                            </li>
-                            <br />
-                            <li>
-                                <div><a href="https://www.facebook.com/permalink.php?story_fbid=pfbid02GxquUsmNFufJnLuTPjqc3Ap1KqcvJhNqWcngi5BUbqaEypDgzBuELovpEr56sBGql&id=100092184139427" style="color: blue !important; text-decoration: none !important; "> Thông báo tuyển sinh lớp 1 và lớp 6. Ngày thu hồ sơ 11-14/7/2023</a></div>
-
-                            </li>
-                        </ul>
+                        <div class="row"><div class="col-5"><a href="@Url.Action("Create", "LienCapTHCS")" class="btn btn-outline-success">Đăng ký dự tuyển lớp 6</a></div></div>
+                        <div class="row">
+                            <p><b>- Chỉ tiêu: </b>123 học sinh (3 lớp)</p>
+                            <p><b>- Đối tượng: </b>Là học sinh trong độ tuổi đã hoàn thành chương trình tiểu học</p>
+                            <p><b>- Phương thức tuyển sinh: </b>Xét tuyển</p>
+                            <p><b>- Thời gian đăng ký dự tuyển: </b>Từ 11/7/2023 đến 14/7/2023</p>
+                            <p><b>- Địa điểm: </b>Trường TH, THCS&THPT Hồng Đức</p>
+                        </div>
                     </div>
 
                 </div>
             </div>
         </div>
+    </div>
+</div>
