--- a/Views/LienCapTHCS/Index.cshtml
+++ b/Views/LienCapTHCS/Index.cshtml
@@ -6,6 +6,7 @@
 <style>
     p {
         margin-bottom: 5px;
+        text-align:justify!important;
     }
 </style>
 <div class="container-fluid px-12">
@@ -16,13 +17,15 @@
 
                     <div class="card-header">Thông tin tuyển sinh lớp 1</div>
                     <div class="card-body">
-                        <div class="row"><div class="col-5"><a href="@Url.Action("Create", "LienCapTieuHocs")" class="btn btn-outline-success">Đăng ký dự tuyển lớp 1</a></div></div>
-                        <div class="row">
-                            <p><b>- Chỉ tiêu: </b>96 học sinh (3 lớp)</p>
-                            <p><b>- Đối tượng: </b>Trẻ em 6 tuổi, đã hoàn thành chương trình giáo dục mầm non</p>
-                            <p><b>- Phương thức tuyển sinh: </b>Xét tuyển</p>
-                            <p><b>- Thời gian đăng ký dự tuyển: </b>Từ 11/7/2023 đến 14/7/2023</p>
-                            <p><b>- Địa điểm: </b>Trường TH, THCS&THPT Hồng Đức</p>
+                        <div class="row"><div class="col-lg-5"><a href="@Url.Action("Create", "LienCapTieuHocs")" class="btn btn-outline-success">Đăng ký dự tuyển lớp 1</a></div></div>
+                        <div class="row mt-2">
+                            <div class="col-lg-12">
+                                <p><b>- Chỉ tiêu: </b>96 học sinh (3 lớp)</p>
+                                <p><b>- Đối tượng: </b>Trẻ em 6 tuổi, đã hoàn thành chương trình giáo dục mầm non</p>
+                                <p><b>- Phương thức tuyển sinh: </b>Xét tuyển</p>
+                                <p><b>- Thời gian đăng ký dự tuyển: </b>Từ 11/7/2023 đến 14/7/2023</p>
+                                <p><b>- Địa điểm: </b>Trường TH, THCS&THPT Hồng Đức</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -31,16 +34,17 @@
                 <div class="card card-header-actions mt-3 mb-1">
                     <div class="card-header">Thông tin tuyển sinh lớp 6</div>
                     <div class="card-body">
-                        <div class="row"><div class="col-5"><a href="@Url.Action("Create", "LienCapTHCS")" class="btn btn-outline-success">Đăng ký dự tuyển lớp 6</a></div></div>
-                        <div class="row">
-                            <p><b>- Chỉ tiêu: </b>123 học sinh (3 lớp)</p>
-                            <p><b>- Đối tượng: </b>Là học sinh trong độ tuổi đã hoàn thành chương trình tiểu học</p>
-                            <p><b>- Phương thức tuyển sinh: </b>Xét tuyển</p>
-                            <p><b>- Thời gian đăng ký dự tuyển: </b>Từ 11/7/2023 đến 14/7/2023</p>
-                            <p><b>- Địa điểm: </b>Trường TH, THCS&THPT Hồng Đức</p>
+                        <div class="row"><div class="col-lg-5"><a href="@Url.Action("Create", "LienCapTHCS")" class="btn btn-outline-success">Đăng ký dự tuyển lớp 6</a></div></div>
+                        <div class="row mt-2">
+                            <div class="col-lg-12">
+                                <p><b>- Chỉ tiêu: </b>123 học sinh (3 lớp)</p>
+                                <p><b>- Đối tượng: </b>Là học sinh trong độ tuổi đã hoàn thành chương trình tiểu học</p>
+                                <p><b>- Phương thức tuyển sinh: </b>Xét tuyển</p>
+                                <p><b>- Thời gian đăng ký dự tuyển: </b>Từ 11/7/2023 đến 14/7/2023</p>
+                                <p><b>- Địa điểm: </b>Trường TH, THCS&THPT Hồng Đức</p>
+                            </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
