--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -636,10 +636,18 @@
             var errorMessage = "Vui lòng nhập kết quả";
             $('#Dkxt_KetQuaDatDuoc_Error').text(errorMessage);
             flag = false;
+        }else if(parseFloat(Dkxt_KetQuaDatDuoc) < 0){
+            var errorMessage = "Kết quả không hợp lệ";
+            $('#Dkxt_KetQuaDatDuoc_Error').text(errorMessage);
+            flag = false;
         }
         if (!Dkxt_TongDiem) {
             var errorMessage = "Vui lòng nhập tổng điểm";
             $('#Dkxt_TongDiem_Error').text(errorMessage);
+            flag = false;
+        } else if(parseFloat(Dkxt_TongDiem) < 0){
+            var errorMessage = "Tổng điểm không hợp lệ";
+            $('#Dkxt_KetQuaDatDuoc_Error').text(errorMessage);
             flag = false;
         }
         if (parseFloat(Dkxt_KetQuaDatDuoc) > parseFloat(Dkxt_TongDiem)) {
