--- a/Views/DangKyXetTuyens/dkxtthptqg.cshtml
+++ b/Views/DangKyXetTuyens/dkxtthptqg.cshtml
@@ -54,55 +54,11 @@
                                     <th style="vertical-align:middle; text-align:center; ">Cập nhật</th>
                                 </tr>
                             </thead>
-                            <tbody id="tbody_list_nguyenvong">
+                            <tbody id="tbody_list_nguyenvong_xtkqthpt">
                             </tbody>
 
                         </table>
-                        <script>
-                            $(document).ready(function () {
-                                ts_dkxt_thptqg_list_all();
-                            });
-                            function ts_dkxt_thptqg_list_all() {
-                                let _output = "";
-                                $.ajax({
-                                    url: "/DangKyXetTuyens/DangKyXetTuyenKQTHPTQG_ListAll/",
-                                    type: 'GET',
-                                    contentType: 'application/json;charset=utf-8',
-                                    dataType: 'json',
-                                    success: function (result_all) {
-
-                                        $('#span_Uutien_doituong').html(result_all.Tsdk_doituong_ten_diem);
-                                        $('#span_Uutien_khuvuc').html(result_all.Tsdk_khuvuv_ten_diem);
-                                        $('#txt_hocluc_12').val(result_all.Tsdk_xeploai_hocluc_12);
-                                        $('#txt_hanhkiem_12').val(result_all.Tsdk_xeploai_hanhkiem_12);
-
-                                        if (result_all.view_list_dkxt_thptqg_ts == 0) {
-                                            _output = '<tr><td colspan="5"  style="text-align:center">Chưa đăng ký nguyện vọng nào!</td></tr>';
-
-                                        }
-
-                                        else {
-                                            $.each(result_all.view_list_dkxt_thptqg_ts, function (i, result) {
-
-                                                _output += '<tr>' +
-                                                    '<td style="vertical-align: middle !important "> NV' + result.Dkxt_KQTQG_NguyenVong + "&nbsp;" + `<button class="btn btn-outline-primary btn-sm" onclick="upData(${result.Dkxt_KQTQG_ID})" ${i == 0 ? "disabled" : ''}>  &#8743;</button>&nbsp;<button  class="btn btn-outline-primary btn-sm" onclick="downData(${result.Dkxt_KQTQG_ID})" ${i == result_all.length - 1 ? "disabled" : ""}> &#8744;</button>  </td>` +
-                                                    '<td style="vertical-align: middle !important "> ' + result.Dkxt_KQTQG_TenAll.Nganh_GhiChu + ' </td>' +
-                                                    '<td style="vertical-align: middle !important ">' + result.Dkxt_KQTQG_TenAll.Thm_MaTen + '</td>' +
-                                                    '<td style="vertical-align: middle !important ">' + result.Dkxt_KQTQG_Diem_Tong_Full + '</td>' +
-                                                    /*'<td>' + '<a href="#" class="btn btn-outline-primary btn-sm" style="vertical-align: middle !important " title="Bấm chuột để xác nhận đăng ký nguyện vọng này"> <input type="checkbox" disabled /> Chưa xác nhận</a>' + '</td>' +*/
-                                                    '<td style="text-align: center; vertical-align: middle !important ">' + `<button class="btn btn-outline-danger btn-sm" onclick="bt_Delete_on_table_Click(${result.Dkxt_KQTQG_ID})"}>Xoá</button>` + '</td>' +
-                                                    '</tr>'
-                                                // + `<button class="btn btn-outline-primary btn-sm" onclick="bt_Update_on_table_Click(${result.Dkxt_ID})"}>Sửa</button>`  +' | '
-                                            });
-                                        }
-                                        document.getElementById('tbody_list_nguyenvong').innerHTML = _output;
-                                    },
-                                    error: function (errormessage) {
-                                        console.log("Có lỗi xảy ra trong quá trình thực hiện");
-                                    }
-                                });
-                            }
-                        </script>
+                      
                     </div>
                 </div>
                 <div class="row">
@@ -127,11 +83,9 @@
     <div id="div_update_aspirations" style="display: none">
         <div class="card card-header-actions">
             <div class="card-header">
-                Đăng ký nguyện vọng mới
+                <span>Đăng ký nguyện vọng mới</span>
                 <button class="btn-close" id="bt_close_div_update_aspirations_first" type="button" aria-label="Close"></button>
-                <script>
 
-                </script>
             </div>
             <div class="card-body">
                 <div class="row">
@@ -384,7 +338,48 @@
 </div>
 
 <script>
+    $(document).ready(function () {
+        ts_dkxt_thptqg_list_all();
+    });
+    function ts_dkxt_thptqg_list_all() {
+        let _output = "";
+        $.ajax({
+            url: "/DangKyXetTuyens/DangKyXetTuyenKQTHPTQG_ListAll/",
+            type: 'GET',
+            contentType: 'application/json;charset=utf-8',
+            dataType: 'json',
+            success: function (result_all) {
+            
+                $('#span_Uutien_doituong').html(result_all.Tsdk_doituong_ten_diem);
+                $('#span_Uutien_khuvuc').html(result_all.Tsdk_khuvuv_ten_diem);
+                $('#txt_hocluc_12').val(result_all.Tsdk_xeploai_hocluc_12);
+                $('#txt_hanhkiem_12').val(result_all.Tsdk_xeploai_hanhkiem_12);
 
+                if (result_all.view_list_dkxt_thptqg_ts == 0) {
+                    _output = '<tr><td colspan="5"  style="text-align:center">Chưa đăng ký nguyện vọng nào!</td></tr>';
+                }
+
+                else {
+                    $.each(result_all.view_list_dkxt_thptqg_ts, function (i, result) {
+
+                        _output += '<tr>' +
+                            '<td style="vertical-align: middle !important "> NV' + result.dkxt_KQTQG_NguyenVong + "&nbsp;" + `<button class="btn btn-outline-primary btn-sm" onclick="upData(${result.Dkxt_KQTQG_ID})" ${i == 0 ? "disabled" : ''}>  &#8743;</button>&nbsp;<button  class="btn btn-outline-primary btn-sm" onclick="downData(${result.Dkxt_KQTQG_ID})" ${i == result_all.length - 1 ? "disabled" : ""}> &#8744;</button>  </td>` +
+                            '<td style="vertical-align: middle !important "> ' + result.dkxt_KQTQG_TenAll.nganh_GhiChu + ' </td>' +
+                            '<td style="vertical-align: middle !important ">' + result.dkxt_KQTQG_TenAll.thm_MaTen + '</td>' +
+                            '<td style="vertical-align: middle !important ">' + result.dkxt_KQTQG_Diem_Tong_Full + '</td>' +
+                            /*'<td>' + '<a href="#" class="btn btn-outline-primary btn-sm" style="vertical-align: middle !important " title="Bấm chuột để xác nhận đăng ký nguyện vọng này"> <input type="checkbox" disabled /> Chưa xác nhận</a>' + '</td>' +*/
+                            '<td style="text-align: center; vertical-align: middle !important ">' + `<button class="btn btn-outline-danger btn-sm" onclick="bt_Delete_on_table_Click(${result.Dkxt_KQTQG_ID})"}>Xoá</button>` + '</td>' +
+                            '</tr>'
+                        // + `<button class="btn btn-outline-primary btn-sm" onclick="bt_Update_on_table_Click(${result.Dkxt_ID})"}>Sửa</button>`  +' | '
+                    });
+                }
+                document.getElementById('tbody_list_nguyenvong_xtkqthpt').innerHTML = _output;
+            },
+            error: function (errormessage) {
+                console.log("Có lỗi xảy ra trong quá trình thực hiện");
+            }
+        });
+    }
     $(document).ready(function () {
         /* Khai báo dữ liệu cho dropdownlist chọn năm */
         let currentYear = new Date().getFullYear();
@@ -670,16 +665,14 @@
             type: 'POST',
             contentType: 'application/json;charset=utf-8',
             dataType: 'json',
-            success: function (res) {
-                console.log(res);
-                return;
+            success: function (res) {             
 
                 if (res.success) {
-                    HienThiNguyenVongDaDangKy();
-                    showToast("Thông báo", "Thêm mới nguyện vọng thành công!", "bg-success");
-                    document.getElementById('div_list_nguyenvong').style.display = "inline";
-                    document.getElementById('div_update_dk_nguyenvong').style.display = "none";
-                    onResetFields();
+                    ts_dkxt_thptqg_list_all();
+                   // showToast("Thông báo", "Thêm mới nguyện vọng thành công!", "bg-success");
+                    document.getElementById('div_list_aspirations').style.display = "inline";
+                    document.getElementById('div_update_aspirations').style.display = "none";
+                    reset_fields_controll_disabled_true();
                 } else {
                     showToast("Thông báo", "Có lỗi xảy ra khi thêm mới nguyện vọng!", "bg-error");
                 }
@@ -689,77 +682,7 @@
             }
         });
     });
-
-    /*
-    $(document).ready(function () {
-        $("#files_hocba").on("change", function () {
-            var files_hocba = document.getElementById('files_hocba');
-            let j = 0;
-            for (i = 0; i < files_hocba.files.length; i++) {
-                j++;
-                var sfilename_hocba = files_hocba.files[i].name;
-                let srandomid_hocba = Math.random().toString(36).substring(7);
-                formdata_files_hocba.append(sfilename_hocba, files_hocba.files[i]);
-
-                var markup_hocba = "<tr id='" + srandomid_hocba + "'><td>" + sfilename_hocba + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Bấm chuột để xóa tệp nếu không đúng!' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_hocba + "\",\"" + sfilename_hocba + "\")'>Xóa</a></td></tr>";
-                $("#FilesList_HocBa_View tbody").append(markup_hocba);
-            }
-            chkatchtbl_hocba();
-            $('#files_hocba').val('');
-        });
-
-        $("#files_cancuoc_congdan").on("change", function () {
-            var files_cancuoc_congdan = document.getElementById('files_cancuoc_congdan');
-            let j = 0;
-            for (i = 0; i < files_cancuoc_congdan.files.length; i++) {
-                j++;
-                var sfilename_cccd = files_cancuoc_congdan.files[i].name;
-                let srandomid_cccd = Math.random().toString(36).substring(7);
-                formdata_cccd.append(sfilename_cccd, files_cancuoc_congdan.files[i]);
-                var markup_cccd = "<tr id='" + srandomid_cccd + "'><td>" + sfilename_cccd + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Bấm chuột để xóa tệp nếu không đúng!' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_cccd + "\",\"" + sfilename_cccd + "\")'>Xóa</a></td></tr>";
-                $("#FilesList_CCCD_View tbody").append(markup_cccd);
-            }
-            chkatchtbl_cccd();
-            $('#files_cancuoc_congdan').val('');
-        });
-
-        $("#files_bangtn").on("change", function () {
-            var files_bangtn = document.getElementById('files_bangtn');
-
-            let j = 0;
-            for (i = 0; i < files_bangtn.files.length; i++) {
-                j++;
-                var sfilename_bang_tn = files_bangtn.files[i].name;
-                let srandomid_bang_tn = Math.random().toString(36).substring(7);
-
-                formdata_bang_tn.append(sfilename_bang_tn, files_bangtn.files[i]);
-                var markup_bang_tn = "<tr id='" + srandomid_bang_tn + "'><td>" + sfilename_bang_tn + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Bấm chuột để xóa tệp nếu không đúng!' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_bang_tn + "\",\"" + sfilename_bang_tn + "\")'>Xóa</a></td></tr>";
-                $("#FilesList_BangTN_View tbody").append(markup_bang_tn);
-
-            }
-            chkatchtbl_bang_tn();
-            $('#files_bangtn').val('');
-        });
-
-        $("#files_giayto_uutien").on("change", function () {
-            var files_giayto_uutien = document.getElementById('files_giayto_uutien');
-
-            let j = 0;
-            for (i = 0; i < files_giayto_uutien.files.length; i++) {
-                j++;
-                var sfilename_gtuutien = files_giayto_uutien.files[i].name;
-                let srandomid_gtuutien = Math.random().toString(36).substring(7);
-
-                formdata_giayto_uutien.append(sfilename_gtuutien, files_giayto_uutien.files[i]);
-                var markup_giayto_uutien = "<tr id='" + srandomid_gtuutien + "'><td>" + sfilename_gtuutien + "</td><td style='width: 40px!important; color:blue'><a style='text-decoration:none' title='Bấm chuột để xóa tệp nếu không đúng!' href='#' onclick='DeleteFile_HoBas_Upload(\"" + srandomid_gtuutien + "\",\"" + sfilename_gtuutien + "\")'>Xóa</a></td></tr>";
-                $("#FilesList_GTUT_View tbody").append(markup_giayto_uutien);
-
-            }
-            chkatchtbl_giayto_uutien();
-            $('#files_giayto_uutien').val('');
-        });
-    });
-    */
+       
     $('#bt_close_div_update_aspirations_second').click(function () {
         document.getElementById('div_list_aspirations').style.display = "inline";
         document.getElementById('div_update_aspirations').style.display = "none";
